Fixed modal z-index to be highest priority

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -5115,7 +5115,7 @@ button.close {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1050;
+  z-index: 500000050;
   -webkit-overflow-scrolling: touch;
   outline: 0;
 }
